--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.kolbenschurzgames.whack_a_toffel.app" >
+<manifest package="de.kolbenschurzgames.whack_a_toffel.app"
+		  xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="de.kolbenschurzgames.whack_a_toffel.app.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<application
+		android:allowBackup="true"
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name"
+		android:theme="@style/AppTheme">
+		<activity
+			android:name="de.kolbenschurzgames.whack_a_toffel.app.MainActivity"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+		<activity
+			android:name="de.kolbenschurzgames.whack_a_toffel.app.game.GameActivity"
+			android:configChanges="orientation|keyboardHidden|screenSize"
+			android:label="@string/title_activity_game"
+			android:parentActivityName="de.kolbenschurzgames.whack_a_toffel.app.MainActivity"
+			android:theme="@style/FullscreenTheme">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="de.kolbenschurzgames.whack_a_toffel.app.MainActivity"/>
+		</activity>
+	</application>
 
 </manifest>
