--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: android
+
+env:
+  matrix:
+    - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
+
 android:
   components:
     # Uncomment the lines below if you want to
@@ -10,16 +15,19 @@ android:
     - build-tools-19.1.0
 
     # The SDK version used to compile your project
-    - android-18
+    - android-19
 
     # Additional components
     - extra-android-support
-    # - extra-google-google_play_services
-    # - extra-google-m2repository
-    # - extra-android-m2repository
-    # - addon-google_apis-google-19
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    # - sys-img-armeabi-v7a-android-19
-    - sys-img-x86-android-17
+    - sys-img-armeabi-v7a-android-19
+    # - sys-img-x86-android-19
+
+    before_script:
+      # Create and start emulator
+      - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+      - emulator -avd test -no-skin -no-audio -no-window &
+      - adb wait-for-device
+      - adb shell input keyevent 82 &
