--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,8 @@ before_script:
     - emulator -avd test -no-skin -no-audio -no-window &
     - adb wait-for-device
     - adb shell input keyevent 82 &
+
+script:
+	- ./gradlew build connectedCheck
+	- ./gradlew :server:npmInstall
+	- ./gradlew :server:npm_test
