--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
 		</activity>
 
 		<activity
-			android:name="de.kolbenschurzgames.whack_a_toffel.app.game.GameActivity"
+			android:name="de.kolbenschurzgames.whack_a_toffel.app.game.GameActivity_"
 			android:configChanges="orientation|keyboardHidden|screenSize"
-			android:label="@string/title_activity_game"
+			android:label="@string/app_name"
 			android:parentActivityName="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"
 			android:theme="@style/FullscreenTheme">
 			<meta-data
