--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-18
+    # - sys-img-armeabi-v7a-android-18
     # - sys-img-x86-android-19
 
 #before_script:
