--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,8 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
