--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ android:
 
     # Additional components
     - extra-android-support
+    - extra-android-m2repository
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
