--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
 
 		<activity
 			android:name="de.kolbenschurzgames.whack_a_toffel.app.game.GameActivity_"
+			android:screenOrientation="portrait"
 			android:configChanges="orientation|keyboardHidden|screenSize"
 			android:label="@string/app_name"
 			android:parentActivityName="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"
