--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whack-a-toffel",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Whack-A-Toffel Backend",
   "main": "src/main/index.js",
   "scripts": {
@@ -8,7 +8,8 @@
     "test": "NODE_ENV=test DEBUG=toffel* mocha --harmony src/test"
   },
   "engines": {
-    "node": ">= 0.11.9"
+    "node": "0.12.x",
+    "npm": "2.5.x"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,10 @@
     "q": "^1.0.1"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
-    "mocha": "^1.21.4",
-    "proxyquire": "^1.0.1",
-    "sinon": "^1.10.3",
+    "chai": "^1.10.0",
+    "mocha": "^1.21.5",
+    "proxyquire": "^1.3.1",
+    "sinon": "^1.12.2",
     "supertest": "^0.13.0"
   }
 }
