--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,8 @@ dependencies {
         exclude module: 'hamcrest-core'
     }
     
+    androidTestCompile('org.json:json:20141113')
+
     androidTestCompile('org.robolectric:robolectric:2.4') {
         exclude module: 'classworlds'
         exclude module: 'commons-logging'
