--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,48 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-	package="de.kolbenschurzgames.whack_a_toffel.app"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="de.kolbenschurzgames.whack_a_toffel.app">
 
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-	<application
-		android:allowBackup="true"
-		android:icon="@drawable/ic_launcher"
-		android:label="@string/app_name"
-		android:theme="@style/AppTheme">
+    <application
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
 
-		<activity
-			android:name="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"
-			android:label="@string/app_name">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+        <activity
+                android:name="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"
+                android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
 
-		<activity
-			android:name="de.kolbenschurzgames.whack_a_toffel.app.game.GameActivity_"
-			android:screenOrientation="portrait"
-			android:configChanges="orientation|keyboardHidden|screenSize"
-			android:label="@string/app_name"
-			android:parentActivityName="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"
-			android:theme="@style/FullscreenTheme">
-			<meta-data
-				android:name="android.support.PARENT_ACTIVITY"
-				android:value="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"/>
-		</activity>
+        <activity
+                android:name="de.kolbenschurzgames.whack_a_toffel.app.game.GameActivity_"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:theme="@style/FullscreenTheme"
+                android:noHistory="false"
+                android:parentActivityName="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"/>
+        </activity>
 
-		<activity
-			android:name="de.kolbenschurzgames.whack_a_toffel.app.highscores.HighscoreActivity_"
-			android:label="@string/title_activity_highscores">
-		</activity>
+        <activity
+                android:name="de.kolbenschurzgames.whack_a_toffel.app.highscores.HighscoreActivity_"
+                android:label="@string/title_activity_highscores"
+                android:parentActivityName="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"/>
+        </activity>
 
-		<activity
-			android:name="de.kolbenschurzgames.whack_a_toffel.app.highscores.SubmitHighscoreActivity_"
-			android:label="@string/submit_highscore"
-			android:theme="@android:style/Theme.Holo.Dialog"/>
-	</application>
+        <activity
+                android:name="de.kolbenschurzgames.whack_a_toffel.app.highscores.SubmitHighscoreActivity_"
+                android:label="@string/submit_highscore"
+                android:theme="@android:style/Theme.Holo.Dialog"
+                android:parentActivityName="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="de.kolbenschurzgames.whack_a_toffel.app.MainActivity_"/>
+        </activity>
+    </application>
 
 </manifest>
