Fix issue where failing server test does not fail Travis Build

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,6 @@ android:
 #    - adb shell input keyevent 82 &
 
 script:
-    - ./gradlew clean build test
-    - ./run_server_tests.sh
+    - ./gradlew :app:clean :app:build :app:test
+    - ./gradlew :server:npmInstall :server:test
+    - ./gradlew :server:integration
