--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,28 +1,22 @@
 buildscript {
     repositories {
         mavenCentral()
+        mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
-        classpath 'org.robolectric:robolectric-gradle-plugin:0.13.2'
+        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
     }
 }
 
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
-apply plugin: 'robolectric'
 
-def AAVersion = '3.2'
+def AAVersion = '3.3.2'
 
 dependencies {
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
-}
-
-repositories {
-    mavenCentral()
-    mavenLocal()
 }
 
 apt {
@@ -31,10 +25,6 @@ apt {
         // if you have multiple outputs (when using splits), you may want to have other index than 0
 
         resourcePackageName 'de.kolbenschurzgames.whack_a_toffel.app'
-
-        // You can set optional annotation processing options here, like these commented options:
-        // logLevel 'INFO'
-        // logFile '/var/log/aa.log'
     }
 }
 
@@ -50,19 +40,12 @@ android {
     buildToolsVersion "19.1"
 
     defaultConfig {
+        applicationId "de.kolbenschurzgames.whack_a_toffel.app"
         minSdkVersion 14
-        targetSdkVersion 18
+        targetSdkVersion 19
         versionCode 1
-        versionName "0.1"
+        versionName "1.0"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            shrinkResources false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
     }
 
     lintOptions {
@@ -70,58 +53,37 @@ android {
     }
 }
 
-robolectric {
-    include '**/*Test.class'
-}
-
-def PowerMockVersion = '1.6.1'
+def PowerMockVersion = '1.6.2'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    // You must install or update the Support Repository through the SDK manager to use this dependency.
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.mcxiaoke.volley:library:1.0.16'
+    // You must install or update the Support Repository through the SDK manager in order to use this dependency.
+    compile 'com.android.support:support-v4:22.2.0'
 
-    androidTestCompile "org.mockito:mockito-core:1.10.8"
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 
-    androidTestCompile "org.powermock:powermock-module-junit4:$PowerMockVersion"
-    androidTestCompile "org.powermock:powermock-module-junit4-rule:$PowerMockVersion"
-    androidTestCompile ("org.powermock:powermock-api-mockito:$PowerMockVersion"){
-        exclude group: "org.mockito"
-    }
-    androidTestCompile ("org.powermock:powermock-classloading-xstream:$PowerMockVersion") {
-        exclude module: "xmlpull"
-        exclude module: "xpp3_min"
-    }
+    testCompile "org.mockito:mockito-core:1.10.19"
 
-    androidTestCompile('junit:junit:4.11') {
-        exclude module: 'hamcrest-core'
-    }
-    
-    androidTestCompile('org.robolectric:robolectric:2.4') {
-        exclude module: 'classworlds'
-        exclude module: 'commons-logging'
-        exclude module: 'httpclient'
-        exclude module: 'maven-artifact'
-        exclude module: 'maven-artifact-manager'
-        exclude module: 'maven-error-diagnostics'
-        exclude module: 'maven-model'
-        exclude module: 'maven-project'
-        exclude module: 'maven-settings'
-        exclude module: 'plexus-container-default'
-        exclude module: 'plexus-interpolation'
-        exclude module: 'plexus-utils'
-        exclude module: 'wagon-file'
-        exclude module: 'wagon-http-lightweight'
-        exclude module: 'wagon-provider-api'
-    }
+    testCompile "org.powermock:powermock-module-junit4:$PowerMockVersion"
+    testCompile "org.powermock:powermock-module-junit4-rule:$PowerMockVersion"
+    testCompile("org.powermock:powermock-api-mockito:$PowerMockVersion")
+    testCompile("org.powermock:powermock-classloading-xstream:$PowerMockVersion")
+
+    testCompile('junit:junit:4.12')
+
+    testCompile('org.robolectric:robolectric:3.0')
 }
 
-apply plugin: 'idea'
+android.testOptions.unitTests.all {
+    // Configure includes / excludes
+    include '**/*Test.class'
 
-idea {
-    module {
-        testOutputDir = file('build/test-classes/debug')
+    // configure whether failing tests should fail the build
+    ignoreFailures false
+
+    // use afterTest to listen to the test execution results
+    afterTest { descriptor, result ->
+        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
     }
 }
