--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+    <uses-sdk android:targetSdkVersion="19" />
+
     <application
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
