--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,14 @@
 {
   "name": "whack-a-toffel",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Whack-A-Toffel Backend",
   "main": "src/main/index.js",
   "scripts": {
-    "start": "DEBUG=toffel* node --harmony src/main/index.js",
-    "test": "NODE_ENV=test DEBUG=toffel* mocha --harmony src/test"
+    "start": "DEBUG=toffel* node src/main/index.js",
+    "test": "NODE_ENV=test DEBUG=toffel* mocha src/test"
   },
   "engines": {
-    "node": "0.12.x",
-    "npm": "2.5.x"
+    "node": "4.0.0"
   },
   "repository": {
     "type": "git",
@@ -21,19 +20,19 @@
   },
   "homepage": "https://github.com/Kolbenschurzgames/Whack-A-Toffel",
   "dependencies": {
-    "debug": "^1.0.4",
-    "koa": "^0.10.0",
-    "koa-body": "^0.2.0",
-    "koa-router": "^3.8.0",
+    "debug": "^2.2.0",
+    "koa": "^1.0.0",
+    "koa-body": "^1.2.1",
+    "koa-router": "^5.1.2",
     "mongodb": "^1.4.38",
     "mongoskin": "^1.4.13",
     "q": "^1.4.1"
   },
   "devDependencies": {
-    "chai": "^1.10.0",
-    "mocha": "^2.2.5",
-    "proxyquire": "^1.5.0",
-    "sinon": "^1.14.1",
-    "supertest": "^0.13.0"
+    "chai": "^3.2.0",
+    "mocha": "^2.3.2",
+    "proxyquire": "^1.7.2",
+    "sinon": "^1.16.1",
+    "supertest": "^1.1.0"
   }
 }
