--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,15 +3,15 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.moowork.gradle:gradle-node-plugin:0.5'
+        classpath 'com.moowork.gradle:gradle-node-plugin:0.11'
     }
 }
 
-apply plugin: 'node'
+apply plugin: 'com.moowork.node'
 
 node {
     // Version of node to use.
-    version = '0.12.4'
+    version = '5.2.0'
 
     // Base URL for fetching node distributions (change if you have a mirror).
     distBaseUrl = 'http://nodejs.org/dist'
