--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "test": "NODE_ENV=test DEBUG=toffel* mocha src/test"
   },
   "engines": {
-    "node": "4.0.0"
+    "node": "5.2.0",
+    "npm": "3.3.x"
   },
   "repository": {
     "type": "git",
@@ -21,18 +22,18 @@
   "homepage": "https://github.com/Kolbenschurzgames/Whack-A-Toffel",
   "dependencies": {
     "debug": "^2.2.0",
-    "koa": "^1.0.0",
-    "koa-body": "^1.2.1",
-    "koa-router": "^5.1.2",
+    "koa": "^1.1.2",
+    "koa-body": "^1.4.0",
+    "koa-router": "^5.3.0",
     "mongodb": "^1.4.38",
     "mongoskin": "^1.4.13",
     "q": "^1.4.1"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
-    "mocha": "^2.3.2",
-    "proxyquire": "^1.7.2",
-    "sinon": "^1.16.1",
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
+    "proxyquire": "^1.7.3",
+    "sinon": "^1.17.2",
     "supertest": "^1.1.0"
   }
 }
