--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: android
 
 env:
   matrix:
-    - ANDROID_TARGET=android-18 ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
 
 services: mongodb
 
@@ -14,14 +14,13 @@ android:
     # - tools
 
     # The BuildTools version used by your project
-    - build-tools-19.1.0
+    - build-tools-25.0.2
 
     # The SDK version used to compile your project
-    - android-19
+    - android-25
 
     # Additional components
-    - extra-android-support
-    - extra-android-m2repository
+    - extra
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
