--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ android:
     # - tools
 
     # The BuildTools version used by your project
+    - tools
     - build-tools-25.0.2
 
     # The SDK version used to compile your project
@@ -26,6 +27,7 @@ android:
     # if you need to run emulator(s) during your tests
     # - sys-img-armeabi-v7a-android-18
     # - sys-img-x86-android-19
+  jdk: oraclejdk8
 
 #before_script:
 # Create and start emulator
