--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "src/main/index.js",
   "scripts": {
     "start": "DEBUG=toffel* node --harmony-async-await src/main/index.js",
-    "test": "NODE_ENV=test DEBUG=toffel* mocha src/test",
-    "integration": "NODE_ENV=test DEBUG=toffel* mocha src/test/integration",
+    "test": "NODE_ENV=test DEBUG=toffel* mocha --harmony-async-await src/test",
+    "integration": "NODE_ENV=test DEBUG=toffel* mocha --harmony-async-await src/test/integration",
     "standard": "standard \"src/**/*.js\""
   },
   "engines": {
