--- a/server/build.gradle
+++ b/server/build.gradle
@@ -28,12 +28,12 @@ node {
 
 task test(type: NodeTask) {
     script = file('node_modules/mocha/bin/mocha')
-    args = ['--harmony-async-await', 'src/test']
+    args = ['--harmony', 'src/test']
     environment = ['NODE_ENV': 'test', 'DEBUG': 'toffel*']
 }
 
 task integration(type: NodeTask) {
     script = file('node_modules/mocha/bin/mocha')
-    args = ['--harmony-async-await', 'src/test/integration']
+    args = ['--harmony', 'src/test/integration']
     environment = ['NODE_ENV': 'test', 'DEBUG': 'toffel*']
 }
